--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cursed-cat-central",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
